--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "server": "nodemon server",
     "client": "npm start --prefix client",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
+    "install": "cd client && npm install",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Jacob Tran",
